@@ -101,7 +101,14 @@ except ImportError:
 'Could not find code generator in %s, do you have installed pygtk correctly?'
 
 if sys.platform == 'win32':
-    extra_compile_args = ['-mms-bitfields']
+    # MSVC compatible struct packing is required.
+    # Note gcc2 uses -fnative-struct while gcc3
+    # uses -mms-bitfields. Based on the version
+    # the proper flag is used below.
+    flag_dict = { '2' : '-fnative-struct', '3' : '-mms-bitfields' }
+    gcc_version = getoutput('gcc --version')
+    extra_compile_args = [ flag_dict[gcc_version[0]] ]
+    print 'Using GCC version %s with the %s flag' % (gcc_version, flag_dict[gcc_version[0]])
 else:
     extra_compile_args = None
 
